--- a/WebContent/UserProfile/UserProfile.html
+++ b/WebContent/UserProfile/UserProfile.html
@@ -22,6 +22,11 @@
 			Number : {{currentUser.ph_numb}}<br>
 			E-mail: {{currentUser.email}}<br>
 			</h3>
+		
+	</div>
+	<div class="col-md-2 col-offset-3">
+		<input type="submit" class="btn btn-warning btn-block" value="Edit Profile" ng-click="cont.updatepage()">
+		<input type="submit" class="btn btn-danger btn-block" value="Delete Profile" ng-click="">
 	</div>
 	<!-- 
 	<div class="col-md-2">
