--- a/WebContent/Admin/AdminHome.html
+++ b/WebContent/Admin/AdminHome.html
@@ -35,7 +35,8 @@
 <div class="col-md-4">
 <div class="panel panel-default">
 		<div class="panel-heading text-center">
-			<img ng-src="http://placehold.it/200x200" style="margin-top:20px">
+			<img ng-src="http://placehold.it/200x200" style="margin-top:20px" class="img-rounded" ng-show="!user.img">
+			<img style="height:200px; width: 200px" ng-src="./resources/Images/{{user.id}}.jpg" class="img-rounded" ng-show="user.img">
 			<h3>{{user.name}}</h3>
 		</div>
 		<div class="panel-body">
